--- a/mod.conf
+++ b/mod.conf
@@ -1,3 +1,3 @@
 name = invisibility
-depends = default, vessels, flowers
+depends = default, vessels
 description = Allows admins/moderators to make players/themselves invisible.
